# Social-Media-Radar

./: .env.example  CAPABILITY_VERIFICATION_MATRIX.md  COMPREHENSIVE_UNIT_TEST_PLAN.md  Calibrated_Inference_Action_System_Blueprint.md  DEPLOYMENT_READY_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_QUALITY_UPGRADE_SUMMARY.md  INDUSTRIAL_UPGRADE_COMPLETE.md  INDUSTRIAL_UPGRADE_PHASE_1.md  INSTALLATION_AND_DEPLOYMENT.md  INTEGRATION_TESTING_REPORT.md  PEAK_QUALITY_ASSURANCE_REPORT.md  PHASE_2_PERFORMANCE_AND_INTELLIGENCE.md  README.md  SECURITY_AND_MEDIA_IMPLEMENTATION.md  TRAINING_SYSTEM.md  UNIT_TESTING_COMPLETE_SUMMARY.md  WEBSITE_DEVELOPER_GUIDE.md  celerybeat-schedule  pyproject.toml  requirements.txt  test_rl_fix.py  train.py  verify_implementation.py
alembic/versions/: 000_initial_schema.py  001_add_actionable_signals_table.py
app/api/: __init__.py  main.py
app/connectors/: apple_news.py  registry.py
app/core/: cache.py  config.py  credential_vault.py  data_residency.py  db_models.py  errors.py  models.py  monitoring.py  security_advanced.py  signal_models.py
app/domain/: action_models.py  inference_models.py  normalized_models.py  raw_models.py
app/evals/: calibration_eval.py  classification_eval.py
app/ingestion/: __init__.py  celery_app.py  content_ingestor.py  enrichment_service.py  normalization_engine.py  pipeline_orchestrator.py  tasks.py
app/intelligence/: __init__.py  abstention.py  action_pipeline.py  action_ranker.py  action_scorer.py  calibration.py  candidate_retrieval.py  cluster_summarizer.py  digest_engine.py  entity_extractor.py  feedback.py  hnsw_search.py  inference_pipeline.py  llm_adjudicator.py  normalization.py  policy_checker.py  reinforcement_learning.py  response_generator.py  response_planner.py  response_playbook.py  signal_classifier.py
app/llm/: __init__.py  anthropic_client.py  base_client.py  cache.py  circuit_breaker.py  config.py  ensemble.py  exceptions.py  models.py  monitoring.py  rate_limiter.py  retry.py  router.py  token_counter.py
app/mcp_server/: server.py
app/media/: __init__.py  advanced_ocr.py  image_analyzer.py  media_downloader.py  multimodal_models.py  video_processor.py  vision_transformer.py
deliverables/: benchmark.py  master_theorem_appendix.md  plot_results.py  production_simulation.py  report.md  space_complexity.md  stress_tests.py
deployment/: .env.template  COMPLETE_IMPLEMENTATION_REPORT.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_READINESS.md  PRODUCTION_READY_REPORT.md  QUICK_START.md  SECURITY_VALIDATION_REPORT.md  simulation_results.json
docs/: LLM_DEPLOYMENT_GUIDE.md  SECURITY_ARCHITECTURE.md  TESTING_GUIDE.md  TRAINING.md  USER_GUIDE.md  competitive_analysis.md
training/: adversarial_augmentation.jsonl  calibration_state.json  fine_tuning_plan.md  generate_dataset.py  signal_classification_dataset.jsonl  train.py  validate_dataset.py
(+109 files in other folders)
