[tool.poetry]
name = "social-media-radar"
version = "0.1.0"
description = "Compliance-first multi-channel intelligence aggregation system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
redis = "^5.0.1"
celery = "^5.3.6"
httpx = "^0.26.0"
pydantic-core = "^2.14.0"

# Platform SDKs
praw = "^7.7.1"  # Reddit
google-api-python-client = "^2.116.0"  # YouTube
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
feedparser = "^6.0.11"  # RSS
aiohttp = "^3.9.0"  # Async HTTP client

# Media Processing
yt-dlp = "^2024.3.10"  # Video downloading
Pillow = "^10.2.0"  # Image processing
ffmpeg-python = "^0.2.0"  # Video processing
aiofiles = "^23.2.1"  # Async file operations
opencv-python = "^4.9.0"  # Computer vision
moviepy = "^1.0.3"  # Video editing
pytesseract = "^0.3.10"  # OCR text extraction

# Cloud Storage
boto3 = "^1.34.34"  # AWS S3
minio = "^7.2.3"  # MinIO object storage
google-cloud-storage = {version = "^2.14.0", optional = true}  # Google Cloud Storage

# AI/ML
openai = "^1.10.0"
anthropic = "^0.18.0"
tiktoken = "^0.6.0"
sentence-transformers = "^2.3.1"
transformers = "^4.37.0"
torch = "^2.2.0"
scikit-learn = "^1.4.0"
hdbscan = "^0.8.33"
spacy = "^3.7.2"

# Security
cryptography = "^42.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
bleach = "^6.1.0"

# Utilities
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
tenacity = "^8.2.3"

# Web scraping
playwright = "^1.41.0"
selenium = "^4.17.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"

# Monitoring & Observability
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require live API keys (deselect with '-m not integration')",
]

